# python-cli-template

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release-artifacts.yml
docs/: architecture.md  claude-code.md  index.md  install.md  operations.md  release-security.md
packaging/homebrew/: acme-cli.rb
packaging/winget/: acme-cli.yaml
scripts/: install-local-hooks.sh  install.cmd  install.ps1  install.sh  pre-commit-check.sh
src/acme_cli/: cli.py  config.py  updater.py
src/acme_cli/commands/: __init__.py  health.py  version.py
tests/integration/commands/: test_health.py  test_help.py  test_version.py
